# opengl

./: 2th_light.cpp  CMakeLists.txt  glad.c  instance.cpp  light.cpp  main.cpp  stbimage.cpp
Header/: stb_image.h
include/: camera.h  mesh.h  model.h  shader.h  shader_s.h
res/: colors.fs  texture.fs  texture.vs
res/advance/: blending.fs  depth_testing.fs  framebuffers_screen.fs  stenci_single_colour.fs
res/advancedlight/: advanced_lighting.fs  shadow_mapping.fs
res/advanceglsl/: advanced_glsl.vs
